[package]
name = "mashmap"
version = "0.1.1"
authors = ["Igor Martayan <imartayan@users.noreply.github.com>"]
description = "A flat HashMap that supports multiple entries per key"
readme = "README.md"
exclude = [".github/**", ".gitignore"]
repository = "https://github.com/imartayan/mashmap"
homepage = "https://crates.io/crates/mashmap"
documentation = "https://docs.rs/mashmap"
license = "MIT"
keywords = ["hashmap", "multimap", "flat"]
categories = ["data-structures"]
edition = "2021"

[dependencies]
ahash = "0.8"
hashbrown = { version = "0.14.5", features = ["raw"] }

[features]
default = []
nightly = []
